# ardronelib

./: CMakeLists.txt  generated_custom.h.cmake.in
ARDroneLib/Soft/Lib/ardrone_tool/Video/: video_com_stage.c  video_stage_ffmpeg_decoder.c
ARDroneLib/VP_SDK/VP_Api/: vp_api_picture.h
ARDroneLib/VP_SDK/VP_Com/: vp_com.h  vp_com_socket.c  vp_com_socket_utils.c
ARDroneLib/VP_SDK/VP_Com/linux/: vp_com_serial.c
cmake/: FindFFmpeg.cmake
